[gd_scene load_steps=7 format=2]

[ext_resource path="res://Basic_Theme.tres" type="Theme" id=1]
[ext_resource path="res://MainScene.gd" type="Script" id=2]
[ext_resource path="res://Veles-Bold.0.9.2.otf" type="DynamicFontData" id=3]
[ext_resource path="res://ExitButton.gd" type="Script" id=4]
[ext_resource path="res://match.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 76
font_data = ExtResource( 3 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -380.0
margin_right = 2.0
margin_bottom = 1016.0
theme = ExtResource( 1 )

[node name="Name" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -172.0
margin_top = 26.0
margin_right = 174.0
margin_bottom = 343.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Big Floppa Memory Game"
align = 1
valign = 1
autowrap = true

[node name="CurrentTime" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = 125.0
margin_right = 179.0
margin_bottom = 226.0
theme = ExtResource( 1 )
text = "Time:
0"
valign = 1
autowrap = true

[node name="BestTime" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = 269.0
margin_right = 179.0
margin_bottom = 370.0
theme = ExtResource( 1 )
text = "Best Time:
0"
valign = 1
autowrap = true

[node name="ExitButton" type="Button" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -94.0
margin_right = 70.0
margin_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
text = "EXIT"
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[connection signal="pressed" from="CanvasLayer/Panel/ExitButton" to="CanvasLayer/Panel/ExitButton" method="_on_ExitButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
